fix user nickname not wrapping correctly

--- a/DiscordDeluuxeEdition.css
+++ b/DiscordDeluuxeEdition.css
@@ -398,6 +398,8 @@ form, .container-iksrDt {
     background: unset;
     position: absolute;
     top: 0px;
+    width: 100%;
+    left: 0px;
 }
 [class*=userPopout] [class*=headerTagNoNickname], [class*=userPopout] [class*=nameTag]{
     z-index: 999;
